--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Candace Buchanan</title>
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;"/>
-    <link rel="stylesheet" type="text/css" media="screen" href="Users/Candace/desktop/Basic-Portfolio/assets/css/style.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css"/>
     <script src="main.js"></script>
 </head>
 <body class="bgimg">
@@ -15,9 +15,9 @@
             <li id="name">Candace Buchanan</li>
             <li id="space2"></li>
             <section id="linkto">
-                <li id="about"><a href="/Users/Candace/desktop/Basic-Portfolio/index.html">About</a></li>
-                <li id="portfolio"><a href="/Users/Candace/desktop/Basic-Portfolio/portfolio.html">Portfolio</a></li>
-                <li id="contact"><a href="/Users/Candace/desktop/Basic-Portfolio/contact.html">Contact</a></li>
+                <li id="about"><a href="index.html">About</a></li>
+                <li id="portfolio"><a href="portfolio.html">Portfolio</a></li>
+                <li id="contact"><a href="contact.html">Contact</a></li>
             </section>
         </ul>
     </div>
@@ -26,7 +26,7 @@
         <h1>About Me</h1>
         <section id="horzline"></section>
         <section>
-            <img id="profilepic" src="/Users/Candace/desktop/Basic-Portfolio/assets/images/profilepic.jpg" height="200px" alt="Profile Picture">
+            <img id="profilepic" src="assets/images/profilepic.jpg" height="200px" alt="Profile Picture">
             <p>Candace has been a Technology Teacher since October 2014. Previously, she taught both 3rd
             and 4th grade for a total of 8 years. She works to inspire and impact every student she comes in contact with. She provides
             her students with as many opportunities in robotics, coding, and in preparation for the rapid advances in technology that
