fixed footer bar to 100%

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Candace Buchanan</title>
-    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;"/>
+    <meta name="viewport" content="width=device-width"/>
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css"/>
-    <script src="main.js"></script>
+
 </head>
-<body class="bgimg">
+<body background= "assets/images/circles-light.png" class="bgimg">
     <div id"navigationbar">
         <ul>
             <li id="space1"></li>
